--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -22,7 +22,7 @@ To further investigate our classification-based cross-identification algorithm w
 
 Such a large catalogue enabled us to estimate a radio luminosity function (RLF) for extended radio sources, the first time a RLF has been produced for just extended sources. We could also subdivide this RLF into a fractional RLF, and we were able to produce RLFs divided by the mid-infrared colour of the host galaxy, their physical extent, and their redshift. Extended radio sources ought to be the sources which contribute the most mechanical energy to their surrounding IGM, and with an RLF dedicated solely to extended sources we were able to estimate this energy contribution as $1.3 \times 10^{30}$ and $1.2 \times 10^{32}$~W~Mpc$^{-3}$. Perhaps most importantly, we showed our cross-identification approach works and used it to obtain a physically meaningful result. Our methods can easily be extended to new surveys, as long as sufficient host galaxy/radio component pairs are known so that the algorithm can be trained.
 
-Our work on cross-identification allowed us to extract more information from wide-area continuum radio surveys. To help gain more use out of large polarisation surveys, in \autoref{cha:faraday} we developed an interpretable Faraday complexity classifier for Faraday dispersion functions (FDFs). We constructed features that were easy to understand by measuring the distance of observations from a simple model of Faraday simple sources. Our resulting features could be calculated from both simulated and real observations. We demonstrated the effectiveness of our method on both simulated and real data and showed that on simulated data our simple methods matched the state-of-the-art convolutional neural network (CNN) classifier despite having far less parameters. This was the first application of machine learning to real spectropolarimetric data. We highlighted the domain gap between simulated and observed FDFs and suggested reframing the Faraday complexity classification task as finding simple and non-simple sources. This method will be applicable to future surveys like POSSUM.
+Our work on cross-identification allowed us to extract more information from wide-area continuum radio surveys. To help gain more use out of large polarisation surveys too, in \autoref{cha:faraday} we developed an interpretable Faraday complexity classifier for Faraday dispersion functions (FDFs). We constructed features that were easy to understand by measuring the distance of observations from a simple model of Faraday simple sources. Our resulting features could be calculated from both simulated and real observations. We demonstrated the effectiveness of our method on both simulated and real data and showed that on simulated data our simple methods matched the state-of-the-art convolutional neural network (CNN) classifier despite having far less parameters. This was the first application of machine learning to real spectropolarimetric data. We highlighted the domain gap between simulated and observed FDFs and suggested reframing the Faraday complexity classification task as finding simple and non-simple sources. This method will be applicable to future surveys like POSSUM.
 
 % \section{What we need to move forward}
 % \label{sec:moving-forward}
@@ -75,5 +75,10 @@ Our work on cross-identification allowed us to extract more information from wid
     % - investigate the link between extended sources and their local environments
     % - apply other crowd aggregation strategies to RGZ
     % - use our insights into FDFs to do other interesting things, like outlier detection, data visualisation, or some new way of qu fitting
+
+\section{Final remarks}
+\label{sec:final-remarks}
+
+    Radio astronomy faces a deluge of data, with current and upcoming surveys delivering incredible amounts of data for science use. While we can get a lot out of these data---from investigations into new physics, to finding rare and unusual objects---doing so is dependent on the development of new methods for astronomy at scale. In this thesis we have introduced two machine learning methods for working with wide-area radio surveys and applied them to real data.
 
 \todo{reflect on the big picture from the very start of the intro in a "final remarks" section}
