--- a/thesis/faraday.tex
+++ b/thesis/faraday.tex
@@ -213,6 +213,7 @@ Faraday complexity describes whether a spectropolarimetric observation has simpl
         \hline\hline
         & \multicolumn{3}{c}{`ASKAP'} & \multicolumn{2}{c}{`ATCA'} \\
         & LR & XGB & CNN & LR & XGB \\
+        \hline
         True negative rate & 0.99 & 0.99 & 0.97 & 0.92 & 0.91\\
         False positive rate & 0.01 & 0.01 & 0.03 & 0.08 & 0.09\\
         False negative rate & 0.10 & 0.09 & 0.07 & 0.16 & 0.10\\
