--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -22,7 +22,8 @@
             pdfpagelabels,
             % pagebackref=true,
             hyperfootnotes=false]{hyperref}
-\usepackage[all]{hypcap}
+% \usepackage[all]{hypcap}
+\usepackage{caption}
 \usepackage[palatino]{anuthesis}
 \usepackage{afterpage}
 \usepackage{graphicx}
